[gd_scene load_steps=5 format=3 uid="uid://dk3lxs46irhxu"]

[ext_resource type="Script" uid="uid://dp5hiinmdkxsl" path="res://scripts/item_card.gd" id="1_lrg7c"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="2_4lcok"]
[ext_resource type="Texture2D" uid="uid://cypw0iso463o4" path="res://assets/cards/道具卡_P1.png" id="2_42m7w"]
[ext_resource type="Texture2D" uid="uid://edrqe82x3f6x" path="res://assets/cards/情报卡/card_13.png" id="3_00mkn"]

[node name="ItemCard" type="Control"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 200.0
script = ExtResource("1_lrg7c")

[node name="CardBase" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_42m7w")
expand_mode = 1
stretch_mode = 5

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -72.0
offset_right = -362.0
offset_bottom = 57.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_00mkn")
expand_mode = 1
stretch_mode = 5

[node name="TextLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CardName" type="Label" parent="TextLayer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 162.0
offset_top = -152.0
offset_right = 462.0
offset_bottom = -96.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("2_4lcok")
theme_override_font_sizes/font_size = 30
text = "卡片名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttributesLabel" type="Label" parent="TextLayer"]
layout_mode = 0
offset_left = 160.0
offset_top = 104.0
offset_right = 470.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.6, 1)
theme_override_fonts/font = ExtResource("2_4lcok")
theme_override_font_sizes/font_size = 18
text = "属性加成"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TagsLabel" type="Label" parent="TextLayer"]
layout_mode = 0
offset_left = 162.0
offset_top = 132.0
offset_right = 456.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0.2, 0.5, 0.2, 1)
theme_override_fonts/font = ExtResource("2_4lcok")
theme_override_font_sizes/font_size = 16
text = "标签"
horizontal_alignment = 1
vertical_alignment = 1
